lupa udh ngpain aja, intinya banyak

--- a/konversi_abstrak_rdflib.ipynb
+++ b/konversi_abstrak_rdflib.ipynb
@@ -142,11 +142,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "2d824c1af90d0052940b4da5efc02e4374f8d5bc7a6912f5d5187da4c995f75f"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.10 ('t_rdflib')",
+   "display_name": "allahuakbar",
    "language": "python",
    "name": "python3"
   },
